--- a/styles.css
+++ b/styles.css
@@ -23,14 +23,14 @@ body{
     flex-basis: 0;
 }
 .uno .titulo{
-    font-size: 45px;
+    font-size: 42px;
     font-weight: bold;
     margin: 0;
 }
 .uno .subtitulo{
-    margin-top: 0px;
+    margin-top: 15px;
     margin-bottom: 25px;
-    font-size: medium;
+    font-size: 20;
     color: rgba(255, 255, 255, 0.7);
 }
 .uno .derecha{
@@ -62,17 +62,10 @@ body{
     margin-top: 15px;
     padding: 10px 35px 10px 35px;
 }
-.img{
-    margin-top: 110px;
-}
-.derecha .abajo{
-    margin: 0;
-    text-align: center;
+.uno .img{
     height: 236px;
     width: 521px;
-    background-color: #6d757f;
 }
-
 .dos{
     height: 498px;
     display: flex;
